<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#637796">


    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:background="#cce0ff"
        android:text="@string/my_schedule"
        android:textColor="@android:color/black"
        android:textSize="16sp"

        android:translationY="99dp" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:text="@string/schedule"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="#cce0ff"

        android:translationX="-100dp"
        android:translationY="180dp" />
    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/enter_email_of_recipient"
        android:background="#cce0ff"

        android:translationX="-450dp"
        android:translationY="450dp" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:background="#cce0ff"
        android:text="@string/my_medication"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:translationX="-702dp"
        android:translationY="99dp" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:background="#cce0ff"
        android:text="@string/share_your_schedule"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:translationX="-702dp"
        android:translationY="90dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="99dp"
        android:text="@string/name_here"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="34sp"
        android:background="#ffffff"
        android:translationX="-902dp"
        android:translationY="-20dp" />
</LinearLayout>
