<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Button_1"
    android:layout_width="413dp"
    android:layout_height="match_parent"
    android:background="#637796"
    tools:ignore="ExtraText">
    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:background="#5e7aa6"
        android:text="@string/my_schedule"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:translationY="99dp" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:background="#5e7aa6"
        android:text="@string/my_medication"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:translationY="99dp" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:background="#5e7aa6"
        android:text="@string/share_your_schedule"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:translationY="90dp" />
// text view info, font, color, size
    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="99dp"
        android:text="@string/name_here"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="34sp"

        android:translationX="-202dp"
        android:translationY="-20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="388dp"
        android:layout_height="100dp"
        android:text="@string/medication_1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:background="#5e7aa6"
        android:translationX="-600dp"
        android:translationY="190dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="388dp"
        android:layout_height="100dp"
        android:text="@string/medication_2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:background="#5e7aa6"
        android:translationX="-988dp"
        android:translationY="290dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="388dp"
        android:layout_height="100dp"
        android:text="Medication 3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:background="#5e7aa6"
        android:translationX="-1376dp"
        android:translationY="390dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="388dp"
        android:layout_height="100dp"
        android:text="Medication 3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:background="#5e7aa6"
        android:translationX="-1765dp"
        android:translationY="490dp" />

</LinearLayout>